docs+注释: 画像构建讲透 + tag/topic 区分钉死 + rank 前置阶段补全
- UserProfileAggregator.build：方法 Javadoc（effective = 行为权重×时长系数×时间衰减 0.7^天）
  + 循环内 ①-⑤ 分步注释（行为权重表/跳过负兴趣/DWELL时长/merge 摊桶/normalize 归一化）
  + activeLevel 注释（log1p 压缩长尾 + 当前未消费备用）
- UserProfile.topicWeight 字段注释：只聚合 topics、不含 Post.tags 手动标签
- 手册第 02 章：Post.tags vs Post.topics 对照（输入/存储/展示三层 + tag 不进推荐原因与消费分工）
- RuleFineRankService.rank 前置①阶段：循环外拉共享上下文（cfg/profile/model/followedReposted）逐行注释
- RecallService：召回融合注释规范化（沿用 .toList() 现代化）